--- a/index.html
+++ b/index.html
@@ -15,37 +15,71 @@
     </header>
     <main class="page-content">
         <div class="conteiner bg-white">
-            <div>
-                <input class="button" type="button" value="Add Task">
+            <div class="border-button">
+                <input class="button bg-blue" type="button" value="Add Task">
                 <input class="button" type="button" value="Add Section">
             </div>
-            <div>&#11206 New Task</div>
             <div>
-                <span class="tick-check">&check;</span>
-                <span>Quarterly Newsletter</span>
-                <span class="badge">Editorial</span>
+                <ul>
+                    <h2>&#11206 New Task</h2>
+                    <li>
+                        <span class="tick-check">&check;</span>
+                        <span>Quarterly Newsletter</span>
+                        <span class="badge bg-blu">Editorial</span>
+                    </li>
+                </ul>
             </div>
-            <div>&#11206 New Task</div>
+
             <div>
-                <span class="tick-check">&check;</span>
-                <span>Quarterly Newsletter</span>
-                <span class="badge">Editorial</span>
+                <ul>
+                    <h2>&#11206 Today</h2>
+                    <li>
+                        <span class="tick-check">&check;</span>
+                        <span>Recruiting blog post</span>
+                        <span class="badge bg-blu">Editorial</span>
+                    </li>
+                    <li>
+                        <span class="tick-check">&check;</span>
+                        <span>Mobile app lunch</span>
+                        <span class="badge bg-violet">Q1 Goals</span>
+                    </li>
+                    <li>
+                        <span class="tick-x">&#10005;</span>
+                        <span>Interview John H</span>
+                        <span class="badge bg-green">Recruiting</span>
+                    </li>
+                    <li>
+                        <span class="tick-check">&#10005;</span>
+                        <span>Summit update to mobile storefronts</span>
+                        <span class="badge bg-orange">Mobile</span>
+                    </li>
+                </ul>
             </div>
             <div>
-                <span class="tick-check">&check;</span>
-                <span>Quarterly Newsletter</span>
-                <span class="badge">Editorial</span>
+                <ul>
+                    <h2>&#11206 Upcoming</h2>
+                    <li>
+                        <span class="tick-x">&check;</span>
+                        <span>Schedule meeting with Alex</span>
+                    </li>
+                    <li>
+                        <span class="tick-check">&check;</span>
+                        <span>Homepage refresh</span>
+                        <span class="badge bg-pink">Website</span>
+                    </li>
+                    <li>
+                        <span class="tick-check">&#10005;</span>
+                        <span>Onboard new Sales team members</span>
+                        <span class="badge bg-lightgreen">Sales</span>
+                    </li>
+                    <li>
+                        <span class="tick-check">&#10005;</span>
+                        <span>Review editorial calendar</span>
+                        <span class="badge bg-blu">Editorial</span>
+                    </li>
+                </ul>
             </div>
-            <div>
-                <span class="tick-check">&check;</span>
-                <span>Quarterly Newsletter</span>
-                <span class="badge">Editorial</span>
-            </div>
-            <div>
-                <span class="tick-check">&check;</span>
-                <span>Quarterly Newsletter</span>
-                <span class="badge">Editorial</span>
-            </div>
+
         </div>
     </main>
 </body>
